--- a/src/main/resources/assets/entity_builder/lang/en_us.json
+++ b/src/main/resources/assets/entity_builder/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "entity.entity_builder.moving_block": "Moving block",
   "text.config.entity_builder.title": [{"text": "Entity Builder Options","color": "#0096FF"}],
   "text.config.entity_builder.option.defaultScale": "Default scale for statues",
   "text.config.entity_builder.option.setBlockMode": "Block placing mode",
@@ -12,7 +13,7 @@
   "text.config.entity_builder.option.creativeBlocks": "Exclude creative blocks",
   "text.config.entity_builder.option.fallingBlocks": "Exclude falling blocks",
   "text.config.entity_builder.option.excludedBlockIDs": "Excluded blocks",
-  "text.config.entity_builder.section.debug": "For Debugging",
+  "text.config.entity_builder.section.debug": "Debugging",
   "text.config.entity_builder.option.showOrigin": "Show statue origin",
   "text.config.entity_builder.option.showOrigin.tooltip": "Generates an obsidian block where you stood",
   "text.config.entity_builder.option.showVertices": "Show vertices",
