--- a/src/main/resources/assets/entity_sculptor/lang/en_us.json
+++ b/src/main/resources/assets/entity_sculptor/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "entity.entity_sculptor.moving_block": "Moving block",
   "text.config.entity_sculptor.title": [{"text": "Entity Sculptor Options","color": "#0096FF"}],
+  "text.config.entity_sculptor.section.build": "Build Command",
   "text.config.entity_sculptor.option.defaultScale": "Default scale for statues",
   "text.config.entity_sculptor.option.setBlockMode": "Block placing mode",
   "text.config.entity_sculptor.option.setBlockMode.value.custompacket": "Send custom packet",
@@ -18,5 +19,7 @@
   "text.config.entity_sculptor.option.showOrigin": "Show statue origin",
   "text.config.entity_sculptor.option.showOrigin.tooltip": "Generates an obsidian block where you stood",
   "text.config.entity_sculptor.option.showVertices": "Show vertices",
-  "text.config.entity_sculptor.option.showVertices.tooltip": "Generates diamond blocks where the entity had vertices"
+  "text.config.entity_sculptor.option.showVertices.tooltip": "Generates diamond blocks where the entity had vertices",
+  "text.config.entity_sculptor.section.matchColor": "Match Color Command",
+  "text.config.entity_sculptor.option.defaultLimit": "Default amount of blocks to suggest"
 }
