--- a/src/main/resources/assets/entity_sculptor/lang/en_us.json
+++ b/src/main/resources/assets/entity_sculptor/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "entity.entity_sculptor.moving_block": "Moving block",
   "text.config.entity_sculptor.title": [{"text": "Entity Sculptor Options","color": "#0096FF"}],
-  "text.config.entity_sculptor.section.build": "Build Command",
+  "text.config.entity_sculptor.section.statue": "Statue Command",
   "text.config.entity_sculptor.option.defaultScale": "Default scale for statues",
   "text.config.entity_sculptor.option.setBlockMode": "Block placing mode",
   "text.config.entity_sculptor.option.setBlockMode.value.custompacket": "Send custom packet",
